feat drive js 수정

--- a/src/drive.html
+++ b/src/drive.html
@@ -20,7 +20,7 @@
     <script defer src="/js/commonButton.js"></script>
 
     <!-- drive js -->
-    <script defer src="/js/drive.js"></script>
+    <script defer src="../js/drive.js"></script>
 
     <!-- car js -->
     <script
@@ -43,7 +43,7 @@
       <!-- GNB Part -->
 
       <ul class="gnb">
-        <li><a href="./drive.html">DRIVE COURSE</a></li>
+        <li><a href="./drive.html">DRIVE </a></li>
         <li><a href="./event.html">EVENT</a></li>
         <li><a href="./palace.html">PALACE</a></li>
         <li><a href="./view.html">VIEW</a></li>
@@ -53,7 +53,7 @@
     <!-- Figure -->
     <figure>
       <video
-        src="/video/drive-image/제목 없는 동영상 - Clipchamp로 제작.mp4"
+        src="../video/제목 없는 동영상 - Clipchamp로 제작.mp4"
         autoplay
         muted
         loop
@@ -960,11 +960,7 @@
     <section id="two">
       <h1>드라이브 코스</h1>
       <div class="drive--cos">
-        <img
-          src="/video/drive-image/banpojpg.jpg"
-          alt="이미지1"
-          class="image image1"
-        />
+        <img src="/video/banpojpg.jpg" alt="이미지1" class="image image1" />
         <div class="drive text1" style="opacity: 1">
           <p class="p p1" style="opacity: 1">반포 대교</p>
           <span class="s s1" style="opacity: 1"
@@ -977,11 +973,7 @@
           <span class="s s1" style="opacity: 1">볼거리: 무지개 분수 </span>
         </div>
 
-        <img
-          src="/video/drive-image/namsan.jpg"
-          alt="이미지2"
-          class="image image2"
-        />
+        <img src="../video/namsan.jpg" alt="이미지2" class="image image2" />
         <div class="drive text2" style="opacity: 0">
           <p class="p p2" style="opacity: 0">남산 타워</p>
           <span class="s s2" style="opacity: 0"
@@ -998,11 +990,7 @@
           >
         </div>
 
-        <img
-          src="/video/drive-image/buk.jpg"
-          alt="이미지3"
-          class="image image3"
-        />
+        <img src="../video/buk.jpg" alt="이미지3" class="image image3" />
         <div class="drive text3" style="opacity: 0">
           <p class="p p3" style="opacity: 0">북악 스퀘어</p>
           <span class="s s3" style="opacity: 1"
@@ -1015,11 +1003,7 @@
           <span class="s s3" style="opacity: 1">볼거리: 북악팔각정</span>
         </div>
 
-        <img
-          src="/video/drive-image/drive4.png"
-          alt="이미지4"
-          class="image image4"
-        />
+        <img src="../video/drive4.png" alt="이미지4" class="image image4" />
         <div class="drive text4" style="opacity: 0">
           <p class="p p4" style="opacity: 0">응봉산</p>
           <span class="s s4" style="opacity: 1"
@@ -1031,11 +1015,7 @@
           <span class="s s4" style="opacity: 1">볼거리: 응봉 암벽등반</span>
         </div>
 
-        <img
-          src="../video/drive-image/drive5.png"
-          alt="이미지5"
-          class="image image5"
-        />
+        <img src="../video/drive5.png" alt="이미지5" class="image image5" />
         <div class="drive text5" style="opacity: 0">
           <p class="p p5" style="opacity: 0">여의도</p>
           <span class="s s5" style="opacity: 1">위치: 서울특별시 영등포구</span>
@@ -1049,11 +1029,7 @@
           </span>
         </div>
 
-        <img
-          src="../video/drive-image/drive6.png"
-          alt="이미지6"
-          class="image image6"
-        />
+        <img src="../video/drive6.png" alt="이미지6" class="image image6" />
         <div class="drive text6" style="opacity: 0">
           <p class="p p6" style="opacity: 0">동호대교</p>
           <span class="s s6" style="opacity: 1">위치: 강남구 압구정동</span>
@@ -1107,37 +1083,43 @@
     <section>
       <div class="seoul">
         <img src="../video/map.png" alt="" class="map" />
-        <div class="container container1">
+
+        <div class="container container1 stop">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
         </div>
-        <div class="container container2">
+
+        <div class="container container2 stop">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
         </div>
-        <div class="container container3">
+
+        <div class="container container3 stop">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
         </div>
-        <div class="container container4">
+
+        <div class="container container4 stop">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
         </div>
-        <div class="container container5">
+
+        <div class="container container5 stop">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
         </div>
-        <div class="container container6">
+
+        <div class="container container6 stop">
           <span></span>
           <span></span>
           <span></span>
