feat. event페이지 섹션2 레이아웃 제작

--- a/src/event.html
+++ b/src/event.html
@@ -95,14 +95,32 @@
       </section>
 
       <section class="section-2">
-        <div class="inner"></div>
+        <div class="inner">
+          <div class="switchBox">
+            <label class="switch">
+              <div class="round">
+                <input name="onoff" id="onoff" type="checkbox" />
+                <div class="back">
+                  <label for="onoff" class="but"
+                    ><span class="on">I</span><span class="off">O</span></label
+                  >
+                </div>
+              </div>
+            </label>
+            <div class="contentsWrapper">
+              THE NIGHT-GOBLIN MARKET
+              <div class="contents">
+                <div class="card">1</div>
+                <div class="card">2</div>
+                <div class="card">3</div>
+                <div class="card">4</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="section-3">
-        <div class="inner"></div>
-      </section>
-
-      <section class="section-4">
         <div class="inner"></div>
       </section>
     </div>
