feat. 파일경로변경

--- a/src/palace.html
+++ b/src/palace.html
@@ -41,9 +41,7 @@
     </ul>
   </header>
   <figure>
-    <video
-      src="../video/palace/8K_Timelapse_광화문_야간개장_타임랩스_A7R3_타임랩스_⧸_Timelapse_영상__무료_타임랩스⧸_Royalty_free_video__AdobeExpress.mp4"
-      autoplay muted loop></video>
+    <video src="../video/palace-image/timelapse.mp4" autoplay muted loop></video>
     <article class="text">
       <p>Palace<br /> Night</p>
     </article>
@@ -66,23 +64,23 @@
     <div class="inner">
       <div class="container">
         <div class="card">
-          <img src="../video/palace/kb-gwanghwa.jpg" />
+          <img src="../video/palace-image/kb-gwanghwa.jpg" />
           <div class="card__head">광화문</div>
         </div>
         <div class="card">
-          <img src="../video/palace/kb-guenjung.jpg" />
+          <img src="../video/palace-image/kb-guenjung.jpg" />
           <div class="card__head">근정전</div>
         </div>
         <div class="card">
-          <img src="../video/palace/kb-hyangwon.jpg" />
+          <img src="../video/palace-image/kb-hyangwon.jpg" />
           <div class="card__head">향원루</div>
         </div>
         <div class="card">
-          <img src="../video/palace/kb-chilgoong.jpeg" />
+          <img src="../video/palace-image/kb-chilgoong.jpeg" />
           <div class="card__head">칠궁</div>
         </div>
         <div class="card">
-          <img src="../video/palace/kb-kyunghoi.jpg" />
+          <img src="../video/palace-image/kb-kyunghoi.jpg" />
           <div class="card__head">경회루</div>
         </div>
       </div>
@@ -121,12 +119,12 @@
           </div>
         </div>
         <div class="right-slide">
-          <div style="background-image: url('../video/palace/ds-doldam.jpg');"></div>
-          <div style="background-image: url('../video/palace/ds-hamnyungjeon.jpg');"></div>
-          <div style="background-image: url('../video/palace/ds-junggwanhun.jpg');"></div>
-          <div style="background-image: url('../video/palace/ds-junghwajeon.jpg');"></div>
-          <div style="background-image: url('../video/palace/ds-seokjojeon.jpg');"></div>
-          <div style="background-image: url('../video/palace/ds-seokuhdang.jpg');"></div>
+          <div style="background-image: url('../video/palace-image/ds-doldam.jpg');"></div>
+          <div style="background-image: url('../video/palace-image/ds-hamnyungjeon.jpg');"></div>
+          <div style="background-image: url('../video/palace-image/ds-junggwanhun.jpg');"></div>
+          <div style="background-image: url('../video/palace-image/ds-junghwajeon.jpg');"></div>
+          <div style="background-image: url('../video/palace-image/ds-seokjojeon.jpg');"></div>
+          <div style="background-image: url('../video/palace-image/ds-seokuhdang.jpg');"></div>
         </div>
         <div class="action-buttons">
           <button class="down-button">
@@ -146,22 +144,22 @@
     <div class="inner">
       <div class="container">
         <div class="mySlides">
-          <img src="../video/palace/ck-myungjeon.jpg" style="width: 100%" />
+          <img src="../video/palace-image/ck-myungjeon.jpg" style="width: 100%" />
         </div>
         <div class="mySlides">
-          <img src="../video/palace/ck-myunokcheon.jpg" style="width: 100%" />
+          <img src="../video/palace-image/ck-myunokcheon.jpg" style="width: 100%" />
         </div>
         <div class="mySlides">
-          <img src="../video/palace/ck-huijungdang.jpg" style="width: 100%" />
+          <img src="../video/palace-image/ck-huijungdang.jpg" style="width: 100%" />
         </div>
         <div class="mySlides">
-          <img src="../video/palace/ck-daeonshil.jpg" style="width: 100%" />
+          <img src="../video/palace-image/ck-daeonshil.jpg" style="width: 100%" />
         </div>
         <div class="mySlides">
-          <img src="../video/palace/ck-buyongji2.jpg" style="width: 100%" />
+          <img src="../video/palace-image/ck-buyongji2.jpg" style="width: 100%" />
         </div>
         <div class="mySlides">
-          <img src="../video/palace/ck-sangryangjeon.jpg" style="width: 100%" />
+          <img src="../video/palace-image/ck-sangryangjeon.jpg" style="width: 100%" />
         </div>
 
         <!-- Next and previous buttons -->
@@ -176,27 +174,27 @@
         <!-- Thumbnail images -->
         <div class="row">
           <div class="column">
-            <img class="demo-cursor" src="../video/palace/ck-myungjeon.jpg" style="width: 100%"
+            <img class="demo-cursor" src="../video/palace-image/ck-myungjeon.jpg" style="width: 100%"
               onclick="currentSlide(1)" alt="명 정 전" />
           </div>
           <div class="column">
-            <img class="demo-cursor" src="../video/palace/ck-myunokcheon.jpg" style="width: 100%"
+            <img class="demo-cursor" src="../video/palace-image/ck-myunokcheon.jpg" style="width: 100%"
               onclick="currentSlide(2)" alt="옥 천 교" />
           </div>
           <div class="column">
-            <img class="demo-cursor" src="../video/palace/ck-huijungdang.jpg" style=" width: 100%"
+            <img class="demo-cursor" src="../video/palace-image/ck-huijungdang.jpg" style=" width: 100%"
               onclick="currentSlide(3)" alt="희 정 당 " />
           </div>
           <div class="column">
-            <img class="demo-cursor" src="../video/palace/ck-daeonshil.jpg" style="width: 100%"
+            <img class="demo-cursor" src="../video/palace-image/ck-daeonshil.jpg" style="width: 100%"
               onclick="currentSlide(4)" alt="대 온 실 " />
           </div>
           <div class="column">
-            <img class="demo-cursor" src="../video/palace/ck-buyongji2.jpg" style="width: 100%"
+            <img class="demo-cursor" src="../video/palace-image/ck-buyongji2.jpg" style="width: 100%"
               onclick="currentSlide(5)" alt="부 용 지" />
           </div>
           <div class="column">
-            <img class="demo-cursor" src="../video/palace/ck-sangryangjeon.jpg" style="width: 100%"
+            <img class="demo-cursor" src="../video/palace-image/ck-sangryangjeon.jpg" style="width: 100%"
               onclick="currentSlide(6)" alt="상 량 전" />
           </div>
         </div>
