--- a/src/palace.html
+++ b/src/palace.html
@@ -31,13 +31,14 @@
 </head>
 
 <body>
+  <!-- HEADER -->
   <header>
-    <a href="/main.html"> NIGHT IN SEOUL.</a>
+    <a href="/main.html" id="headerLogo"> NIGHT IN SEOUL.</a>
     <ul>
-      <li>Drive</li>
-      <li>Drive</li>
-      <li>Drive</li>
-      <li>Drive</li>
+      <li><a href="/src/event.html">EVENT</a></li>
+      <li><a href="/src/palace.html">PALACE</a></li>
+      <li><a href="/src/drive.html">DRIVE</a></li>
+      <li><a href="/src/view.html">VIEW</a></li>
     </ul>
   </header>
   <figure>
@@ -93,29 +94,29 @@
     <div class="inner">
       <div class="slider-container">
         <div class="left-slide">
-          <div style="background-color: rgb(255, 123, 207)">
-            <h1>덕수궁 돌담길</h1>
-            <p>to evlove into care</p>
+          <div style="background-color: rgb(224, 197, 214)">
+            <h1>덕수궁 석어당</h1>
+            <p>'옛 임금이 머물던 집'<br />덕수궁에 유일하게 남아있는 중층 전각으로 임진왜란 당시 선조가 머물렀던 곳</p>
           </div>
-          <div style="background-color: rgb(232, 169, 209)">
+          <div style="background-color: rgb(162, 196, 247)">
             <h1>덕수궁 석조전</h1>
-            <p>Shinning the clouds</p>
+            <p>유럽의 궁궐을 참고하였고 <br />황제 가족이 생활하며 손님을 맞았던<br /> 대한제국의 대표적인 서양식 건물</p>
           </div>
-          <div style="background-color: rgb(232, 169, 209)">
-            <h1>덕수궁 함녕전</h1>
-            <p>in the wilderness</p>
+          <div style="background-color: rgb(246, 225, 170)">
+            <h1>덕수궁 중화전</h1>
+            <p>보물 제819호, 임금이 하례를 받거나 국가행사를 거행하던 곳 화재로 인해 <br />중층이었던 건물이 현재 단층으로 축소.</p>
           </div>
-          <div style="background-color: rgb(232, 169, 209)">
+          <div style="background-color: rgb(153, 201, 255)">
             <h1>덕수궁 정관헌</h1>
-            <p>in the sunset</p>
+            <p>러시아 건축가가 설계하여 독특한 외관을 갖고 있으며 고종황제가 커피를 즐겼던 곳 이자 황제의 연회장소</p>
           </div>
-          <div style="background-color: rgb(232, 169, 209)">
-            <h1>덕수궁 석조전</h1>
-            <p>to evlove into care</p>
+          <div style="background-color: #fcdcf0">
+            <h1>덕수궁 함녕전</h1>
+            <p>고종 황제의 편전이자 침전으로 사용되었던 곳으로 고종이 승하했던 곳</p>
           </div>
-          <div style="background-color: rgb(232, 169, 209)">
+          <div style="background-color: rgb(110, 100, 107)">
             <h1>덕수궁 돌담길</h1>
-            <p>Shinning the clouds</p>
+            <p>1년내내 야간개장을 하는 덕수궁 돌담을 따라 산책하는 유명한 데이트장소 </p>
           </div>
         </div>
         <div class="right-slide">
@@ -144,7 +145,7 @@
     <div class="inner">
       <div class="container">
         <div class="mySlides">
-          <img src="../video/palace-image/ck-myungjeon.jpg" style="width: 100%" />
+          <img src="../video/palace-image/ck-myungjeon.jpg" style="width: 100%; height:620px" />
         </div>
         <div class="mySlides">
           <img src="../video/palace-image/ck-myunokcheon.jpg" style="width: 100%" />
@@ -174,7 +175,7 @@
         <!-- Thumbnail images -->
         <div class="row">
           <div class="column">
-            <img class="demo-cursor" src="../video/palace-image/ck-myungjeon.jpg" style="width: 100%"
+            <img class="demo-cursor" src="../video/palace-image/ck-myungjeon.jpg" style="width: 100%; height:110px"
               onclick="currentSlide(1)" alt="명 정 전" />
           </div>
           <div class="column">
