--- a/src/drive.html
+++ b/src/drive.html
@@ -1071,18 +1071,12 @@
           <span>동호대교</span>
         </button>
       </div>
-      <div>
-        <p class="go">
-          Go!
-          <i class="fa-solid fa-arrow-down"></i>
-        </p>
-      </div>
     </section>
 
     <!-- Map Page-->
     <section>
       <div class="seoul">
-        <img src="../video/map.png" alt="" class="map" />
+        <img src="../video/map.gif" alt="" class="map" />
 
         <div class="container container1 stop">
           <span></span>
