style. event페이지 섹션2 스타일 변경

--- a/src/event.html
+++ b/src/event.html
@@ -110,7 +110,23 @@
             <div class="contentsWrapper">
               THE NIGHT-GOBLIN MARKET
               <div class="contents">
-                <div class="card">1</div>
+                <div class="card">
+                  <div class="cardWrapper">
+                    <div class="card-image">
+                      <img
+                        src="/video/event-image/여의도 야시장.jpg"
+                        alt="여의도"
+                      />
+                    </div>
+                    <div class="category">Illustration</div>
+                    <div class="heading">
+                      A heading that must span over two lines
+                      <div class="author">
+                        By <span class="name">Abi</span> 4 days ago
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <div class="card">2</div>
                 <div class="card">3</div>
                 <div class="card">4</div>
@@ -118,10 +134,6 @@
             </div>
           </div>
         </div>
-      </section>
-
-      <section class="section-3">
-        <div class="inner"></div>
       </section>
     </div>
     <!-- BUTTON -->
