--- a/src/event.html
+++ b/src/event.html
@@ -111,25 +111,17 @@
               THE NIGHT-GOBLIN MARKET
               <div class="contents">
                 <div class="card">
-                  <div class="cardWrapper">
+                  <div class="cardWrapper" id="card1">
                     <div class="card-image">
                       <img
                         src="/video/event-image/여의도 야시장.jpg"
                         alt="여의도"
                       />
                     </div>
-                    <div class="category">Illustration</div>
-                    <div class="heading">
-                      A heading that must span over two lines
-                      <div class="author">
-                        By <span class="name">Abi</span> 4 days ago
-                      </div>
-                    </div>
+                    <div class="category">Yeouido</div>
+                    <div class="heading">Yeouido Night-goblin Market</div>
                   </div>
                 </div>
-                <div class="card">2</div>
-                <div class="card">3</div>
-                <div class="card">4</div>
               </div>
             </div>
           </div>
