feat drive page 완성

--- a/src/drive.html
+++ b/src/drive.html
@@ -43,9 +43,9 @@
       <!-- GNB Part -->
 
       <ul class="gnb">
-        <li><a href="./drive.html">DRIVE </a></li>
-        <li><a href="./event.html">EVENT</a></li>
-        <li><a href="./palace.html">PALACE</a></li>
+        <li><a href="./drive.html">EVENT</a></li>
+        <li><a href="./event.html">PALACE</a></li>
+        <li><a href="./palace.html">DRIVE</a></li>
         <li><a href="./view.html">VIEW</a></li>
       </ul>
     </header>
@@ -1032,9 +1032,13 @@
         <img src="../video/drive6.png" alt="이미지6" class="image image6" />
         <div class="drive text6" style="opacity: 0">
           <p class="p p6" style="opacity: 0">동호대교</p>
-          <span class="s s6" style="opacity: 1">위치: 강남구 압구정동</span>
-          <span class="s s6" style="opacity: 1">교통정보: 강남구 압구정동</span>
-          <span class="s s6" style="opacity: 1">볼거리: 강남구 압구정동</span>
+          <span class="s s6" style="opacity: 1"
+            >위치: 서울특별시 성동구 옥수동</span
+          >
+          <span class="s s6" style="opacity: 1"
+            >교통정보: 서울 지하철 3호선 금호역~압구정역</span
+          >
+          <span class="s s6" style="opacity: 1">볼거리: 한강 야경</span>
         </div>
       </div>
 
@@ -1078,42 +1082,42 @@
       <div class="seoul">
         <img src="../video/map.gif" alt="" class="map" />
 
-        <div class="container container1 stop">
+        <div class="container container1">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
         </div>
 
-        <div class="container container2 stop">
+        <div class="container container2">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
         </div>
 
-        <div class="container container3 stop">
+        <div class="container container3">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
         </div>
 
-        <div class="container container4 stop">
+        <div class="container container4">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
         </div>
 
-        <div class="container container5 stop">
+        <div class="container container5">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
         </div>
 
-        <div class="container container6 stop">
+        <div class="container container6">
           <span></span>
           <span></span>
           <span></span>
