feat. 페이지 title 수정 및 팀명수정..최종ver

--- a/src/view.html
+++ b/src/view.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>야경페이지</title>
+    <title>VIEW</title>
     <!-- FONT AWESOME -->
     <script
       defer
@@ -98,7 +98,7 @@
               <div class="circleline">
                 <div class="circle"></div>
               </div>
-              <p class="name">KDT_5th_TEAM30S</p>
+              <p class="name">KDT_5th_TEAM2030</p>
             </article>
             <img src="/video/spot-image/서울로 화질.jpg" alt="서울로" />
             <article class="emoge">
@@ -111,7 +111,7 @@
         <div class="slider-content2" id="kakaoBg">
           <figure class="kakao" id="kakaoPic1">
             <div class="chatContainer" id="chatContainer1">
-              <div class="chatName">TEAM30S</div>
+              <div class="chatName">TEAM2030</div>
             </div>
           </figure>
         </div>
