--- a/src/palace.html
+++ b/src/palace.html
@@ -1,212 +1,317 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PALACE</title>
+    <!-- FONT AWESOME -->
+    <script
+      defer
+      src="https://kit.fontawesome.com/7090071867.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- SCSS -->
+    <link rel="stylesheet" href="/scss/palace css/palace.css" />
+    <!-- JS -->
+    <script defer src="/js/palace.js"></script>
+    <script defer src="/js/commonButton.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <!-- FONT AWESOME -->
-  <script defer src="https://kit.fontawesome.com/7090071867.js" crossorigin="anonymous"></script>
-  <!-- SCSS -->
-  <link rel="stylesheet" href="/scss/palace css/palace.css" />
-  <!-- JS -->
-  <script defer src="/js/palace.js"></script>
-  <script defer src="/js/commonButton.js"></script>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <!-- FONT AWESOME -->
+    <script
+      defer
+      src="https://kit.fontawesome.com/7090071867.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- SCSS -->
+    <link rel="stylesheet" href="/scss/palace css/palace.css" />
+    <!-- JS -->
+    <script defer src="/js/palace.js"></script>
+    <script defer src="/js/commonButton.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <!-- FONT AWESOME -->
-  <script defer src="https://kit.fontawesome.com/7090071867.js" crossorigin="anonymous"></script>
-  <!-- SCSS -->
-  <link rel="stylesheet" href="/scss/palace css/palace.css" />
-  <!-- JS -->
-  <script defer src="/js/palace.js"></script>
-  <script defer src="/js/commonButton.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-</head>
+  <body>
+    <!-- HEADER -->
+    <header>
+      <a href="/main.html" id="headerLogo"> NIGHT IN SEOUL.</a>
+      <ul>
+        <li><a href="/src/event.html">EVENT</a></li>
+        <li><a href="/src/palace.html">PALACE</a></li>
+        <li><a href="/src/drive.html">DRIVE</a></li>
+        <li><a href="/src/view.html">VIEW</a></li>
+      </ul>
+    </header>
+    <figure>
+      <video
+        src="../video/palace-image/timelapse.mp4"
+        autoplay
+        muted
+        loop
+      ></video>
+      <article class="text">
+        <p>
+          Palace<br />
+          Night
+        </p>
+      </article>
+    </figure>
 
-<body>
-  <!-- HEADER -->
-  <header>
-    <a href="/main.html" id="headerLogo"> NIGHT IN SEOUL.</a>
-    <ul>
-      <li><a href="/src/event.html">EVENT</a></li>
-      <li><a href="/src/palace.html">PALACE</a></li>
-      <li><a href="/src/drive.html">DRIVE</a></li>
-      <li><a href="/src/view.html">VIEW</a></li>
-    </ul>
-  </header>
-  <figure>
-    <video src="../video/palace-image/timelapse.mp4" autoplay muted loop></video>
-    <article class="text">
-      <p>Palace<br /> Night</p>
-    </article>
-  </figure>
-
-  <div class="mq1">
-    <marquee behavior="scroll" direction="left" scrolldelay="3">Seoul Night Seoul Night Seoul Night Seoul Night Seoul
-      Night
-      Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul NightSeoul Night Seoul Night Seoul
-      Night Seoul Night Seoul Night </marquee>
-  </div>
-  <div class="mq2">
-    <marquee behavior="scroll" direction="right" scrolldelay="3">Seoul Night Seoul Night Seoul Night Seoul Night Seoul
-      Night
-      Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul NightSeoul Night Seoul Night Seoul
-      Night Seoul Night Seoul Night </marquee>
-  </div>
-  <!-- 경복궁 -->
-  <section class="palace-kb">
-    <div class="inner">
-      <div class="container">
-        <div class="card">
-          <img src="../video/palace-image/kb-gwanghwa.jpg" />
-          <div class="card__head">광화문</div>
-        </div>
-        <div class="card">
-          <img src="../video/palace-image/kb-guenjung.jpg" />
-          <div class="card__head">근정전</div>
-        </div>
-        <div class="card">
-          <img src="../video/palace-image/kb-hyangwon.jpg" />
-          <div class="card__head">향원루</div>
-        </div>
-        <div class="card">
-          <img src="../video/palace-image/kb-chilgoong.jpeg" />
-          <div class="card__head">칠궁</div>
-        </div>
-        <div class="card">
-          <img src="../video/palace-image/kb-kyunghoi.jpg" />
-          <div class="card__head">경회루</div>
-        </div>
-      </div>
+    <div class="mq1">
+      <marquee behavior="scroll" direction="left" scrolldelay="3"
+        >Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night
+        Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul
+        NightSeoul Night Seoul Night Seoul Night Seoul Night Seoul Night
+      </marquee>
     </div>
-
-  </section>
-
-  <!-- 덕수궁  -->
-  <section class="palace-ds">
-    <div class="inner">
-      <div class="slider-container">
-        <div class="left-slide">
-          <div style="background-color: rgb(224, 197, 214)">
-            <h1>덕수궁 석어당</h1>
-            <p>'옛 임금이 머물던 집'<br />덕수궁에 유일하게 남아있는 중층 전각으로 임진왜란 당시 선조가 머물렀던 곳</p>
-          </div>
-          <div style="background-color: rgb(162, 196, 247)">
-            <h1>덕수궁 석조전</h1>
-            <p>유럽의 궁궐을 참고하였고 <br />황제 가족이 생활하며 손님을 맞았던<br /> 대한제국의 대표적인 서양식 건물</p>
-          </div>
-          <div style="background-color: rgb(246, 225, 170)">
-            <h1>덕수궁 중화전</h1>
-            <p>보물 제819호, 임금이 하례를 받거나 국가행사를 거행하던 곳 화재로 인해 <br />중층이었던 건물이 현재 단층으로 축소.</p>
-          </div>
-          <div style="background-color: rgb(153, 201, 255)">
-            <h1>덕수궁 정관헌</h1>
-            <p>러시아 건축가가 설계하여 독특한 외관을 갖고 있으며 고종황제가 커피를 즐겼던 곳 이자 황제의 연회장소</p>
-          </div>
-          <div style="background-color: #fcdcf0">
-            <h1>덕수궁 함녕전</h1>
-            <p>고종 황제의 편전이자 침전으로 사용되었던 곳으로 고종이 승하했던 곳</p>
-          </div>
-          <div style="background-color: rgb(110, 100, 107)">
-            <h1>덕수궁 돌담길</h1>
-            <p>1년내내 야간개장을 하는 덕수궁 돌담을 따라 산책하는 유명한 데이트장소 </p>
-          </div>
-        </div>
-        <div class="right-slide">
-          <div style="background-image: url('../video/palace-image/ds-doldam.jpg');"></div>
-          <div style="background-image: url('../video/palace-image/ds-hamnyungjeon.jpg');"></div>
-          <div style="background-image: url('../video/palace-image/ds-junggwanhun.jpg');"></div>
-          <div style="background-image: url('../video/palace-image/ds-junghwajeon.jpg');"></div>
-          <div style="background-image: url('../video/palace-image/ds-seokjojeon.jpg');"></div>
-          <div style="background-image: url('../video/palace-image/ds-seokuhdang.jpg');"></div>
-        </div>
-        <div class="action-buttons">
-          <button class="down-button">
-            <i class="fas fa-arrow-down"></i>
-          </button>
-          <button class="up-button">
-            <i class="fas fa-arrow-up"></i>
-          </button>
-        </div>
-      </div>
+    <div class="mq2">
+      <marquee behavior="scroll" direction="right" scrolldelay="3"
+        >Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night
+        Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul
+        NightSeoul Night Seoul Night Seoul Night Seoul Night Seoul Night
+      </marquee>
     </div>
-  </section>
-
-
-  <!-- 창경궁 -->
-  <section class="palace-cdk">
-    <div class="inner">
-      <div class="container">
-        <div class="mySlides">
-          <img src="../video/palace-image/ck-myungjeon.jpg" style="width: 100%; height:620px" />
-        </div>
-        <div class="mySlides">
-          <img src="../video/palace-image/ck-myunokcheon.jpg" style="width: 100%" />
-        </div>
-        <div class="mySlides">
-          <img src="../video/palace-image/ck-huijungdang.jpg" style="width: 100%" />
-        </div>
-        <div class="mySlides">
-          <img src="../video/palace-image/ck-daeonshil.jpg" style="width: 100%" />
-        </div>
-        <div class="mySlides">
-          <img src="../video/palace-image/ck-buyongji2.jpg" style="width: 100%" />
-        </div>
-        <div class="mySlides">
-          <img src="../video/palace-image/ck-sangryangjeon.jpg" style="width: 100%" />
-        </div>
-
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-        <!-- Image text -->
-        <div class="caption-container">
-          <p id="caption"></p>
-        </div>
-
-        <!-- Thumbnail images -->
-        <div class="row">
-          <div class="column">
-            <img class="demo-cursor" src="../video/palace-image/ck-myungjeon.jpg" style="width: 100%; height:110px"
-              onclick="currentSlide(1)" alt="명 정 전" />
+    <!-- 경복궁 -->
+    <section class="palace-kb">
+      <div class="inner">
+        <div class="container">
+          <div class="card">
+            <img src="../video/palace-image/kb-gwanghwa.jpg" />
+            <div class="card__head">광화문</div>
           </div>
-          <div class="column">
-            <img class="demo-cursor" src="../video/palace-image/ck-myunokcheon.jpg" style="width: 100%"
-              onclick="currentSlide(2)" alt="옥 천 교" />
+          <div class="card">
+            <img src="../video/palace-image/kb-guenjung.jpg" />
+            <div class="card__head">근정전</div>
           </div>
-          <div class="column">
-            <img class="demo-cursor" src="../video/palace-image/ck-huijungdang.jpg" style=" width: 100%"
-              onclick="currentSlide(3)" alt="희 정 당 " />
+          <div class="card">
+            <img src="../video/palace-image/kb-hyangwon.jpg" />
+            <div class="card__head">향원루</div>
           </div>
-          <div class="column">
-            <img class="demo-cursor" src="../video/palace-image/ck-daeonshil.jpg" style="width: 100%"
-              onclick="currentSlide(4)" alt="대 온 실 " />
+          <div class="card">
+            <img src="../video/palace-image/kb-chilgoong.jpeg" />
+            <div class="card__head">칠궁</div>
           </div>
-          <div class="column">
-            <img class="demo-cursor" src="../video/palace-image/ck-buyongji2.jpg" style="width: 100%"
-              onclick="currentSlide(5)" alt="부 용 지" />
-          </div>
-          <div class="column">
-            <img class="demo-cursor" src="../video/palace-image/ck-sangryangjeon.jpg" style="width: 100%"
-              onclick="currentSlide(6)" alt="상 량 전" />
+          <div class="card">
+            <img src="../video/palace-image/kb-kyunghoi.jpg" />
+            <div class="card__head">경회루</div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- BUTTON -->
-  <button id="commonUpButton">
-    <i class="fa-solid fa-arrow-up"></i>
-  </button>
-</body>
+    <!-- 덕수궁  -->
+    <section class="palace-ds">
+      <div class="inner">
+        <div class="slider-container">
+          <div class="left-slide">
+            <div style="background-color: rgb(224, 197, 214)">
+              <h1>덕수궁 석어당</h1>
+              <p>
+                '옛 임금이 머물던 집'<br />덕수궁에 유일하게 남아있는 중층
+                전각으로 임진왜란 당시 선조가 머물렀던 곳
+              </p>
+            </div>
+            <div style="background-color: rgb(162, 196, 247)">
+              <h1>덕수궁 석조전</h1>
+              <p>
+                유럽의 궁궐을 참고하였고 <br />황제 가족이 생활하며 손님을
+                맞았던<br />
+                대한제국의 대표적인 서양식 건물
+              </p>
+            </div>
+            <div style="background-color: rgb(246, 225, 170)">
+              <h1>덕수궁 중화전</h1>
+              <p>
+                보물 제819호, 임금이 하례를 받거나 국가행사를 거행하던 곳 화재로
+                인해 <br />중층이었던 건물이 현재 단층으로 축소.
+              </p>
+            </div>
+            <div style="background-color: rgb(153, 201, 255)">
+              <h1>덕수궁 정관헌</h1>
+              <p>
+                러시아 건축가가 설계하여 독특한 외관을 갖고 있으며 고종황제가
+                커피를 즐겼던 곳 이자 황제의 연회장소
+              </p>
+            </div>
+            <div style="background-color: #fcdcf0">
+              <h1>덕수궁 함녕전</h1>
+              <p>
+                고종 황제의 편전이자 침전으로 사용되었던 곳으로 고종이 승하했던
+                곳
+              </p>
+            </div>
+            <div style="background-color: rgb(110, 100, 107)">
+              <h1>덕수궁 돌담길</h1>
+              <p>
+                1년내내 야간개장을 하는 덕수궁 돌담을 따라 산책하는 유명한
+                데이트장소
+              </p>
+            </div>
+          </div>
+          <div class="right-slide">
+            <div
+              style="
+                background-image: url('../video/palace-image/ds-doldam.jpg');
+              "
+            ></div>
+            <div
+              style="
+                background-image: url('../video/palace-image/ds-hamnyungjeon.jpg');
+              "
+            ></div>
+            <div
+              style="
+                background-image: url('../video/palace-image/ds-junggwanhun.jpg');
+              "
+            ></div>
+            <div
+              style="
+                background-image: url('../video/palace-image/ds-junghwajeon.jpg');
+              "
+            ></div>
+            <div
+              style="
+                background-image: url('../video/palace-image/ds-seokjojeon.jpg');
+              "
+            ></div>
+            <div
+              style="
+                background-image: url('../video/palace-image/ds-seokuhdang.jpg');
+              "
+            ></div>
+          </div>
+          <div class="action-buttons">
+            <button class="down-button">
+              <i class="fas fa-arrow-down"></i>
+            </button>
+            <button class="up-button">
+              <i class="fas fa-arrow-up"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <!-- 창경궁 -->
+    <section class="palace-cdk">
+      <div class="inner">
+        <div class="container">
+          <div class="mySlides">
+            <img
+              src="../video/palace-image/ck-myungjeon.jpg"
+              style="width: 100%; height: 620px"
+            />
+          </div>
+          <div class="mySlides">
+            <img
+              src="../video/palace-image/ck-myunokcheon.jpg"
+              style="width: 100%"
+            />
+          </div>
+          <div class="mySlides">
+            <img
+              src="../video/palace-image/ck-huijungdang.jpg"
+              style="width: 100%"
+            />
+          </div>
+          <div class="mySlides">
+            <img
+              src="../video/palace-image/ck-daeonshil.jpg"
+              style="width: 100%"
+            />
+          </div>
+          <div class="mySlides">
+            <img
+              src="../video/palace-image/ck-buyongji2.jpg"
+              style="width: 100%"
+            />
+          </div>
+          <div class="mySlides">
+            <img
+              src="../video/palace-image/ck-sangryangjeon.jpg"
+              style="width: 100%"
+            />
+          </div>
+
+          <!-- Next and previous buttons -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+          <!-- Image text -->
+          <div class="caption-container">
+            <p id="caption"></p>
+          </div>
+
+          <!-- Thumbnail images -->
+          <div class="row">
+            <div class="column">
+              <img
+                class="demo-cursor"
+                src="../video/palace-image/ck-myungjeon.jpg"
+                style="width: 100%; height: 110px"
+                onclick="currentSlide(1)"
+                alt="명 정 전"
+              />
+            </div>
+            <div class="column">
+              <img
+                class="demo-cursor"
+                src="../video/palace-image/ck-myunokcheon.jpg"
+                style="width: 100%"
+                onclick="currentSlide(2)"
+                alt="옥 천 교"
+              />
+            </div>
+            <div class="column">
+              <img
+                class="demo-cursor"
+                src="../video/palace-image/ck-huijungdang.jpg"
+                style="width: 100%"
+                onclick="currentSlide(3)"
+                alt="희 정 당 "
+              />
+            </div>
+            <div class="column">
+              <img
+                class="demo-cursor"
+                src="../video/palace-image/ck-daeonshil.jpg"
+                style="width: 100%"
+                onclick="currentSlide(4)"
+                alt="대 온 실 "
+              />
+            </div>
+            <div class="column">
+              <img
+                class="demo-cursor"
+                src="../video/palace-image/ck-buyongji2.jpg"
+                style="width: 100%"
+                onclick="currentSlide(5)"
+                alt="부 용 지"
+              />
+            </div>
+            <div class="column">
+              <img
+                class="demo-cursor"
+                src="../video/palace-image/ck-sangryangjeon.jpg"
+                style="width: 100%"
+                onclick="currentSlide(6)"
+                alt="상 량 전"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- BUTTON -->
+    <button id="commonUpButton">
+      <i class="fa-solid fa-arrow-up"></i>
+    </button>
+  </body>
 </html>
