feat. drive페이지 최종 수정

--- a/src/drive.html
+++ b/src/drive.html
@@ -1080,7 +1080,7 @@
     <!-- Map Page-->
     <section>
       <div class="seoul">
-        <img src="../video/map.gif" alt="" class="map" />
+        <img src="../video/map.jpg" alt="" class="map" />
 
         <div class="container container1">
           <span></span>
