--- a/src/drive.html
+++ b/src/drive.html
@@ -43,9 +43,9 @@
       <!-- GNB Part -->
 
       <ul class="gnb">
-        <li><a href="./drive.html">EVENT</a></li>
-        <li><a href="./event.html">PALACE</a></li>
-        <li><a href="./palace.html">DRIVE</a></li>
+        <li><a href="./event.html">EVENT</a></li>
+        <li><a href="./palace.html">PALACE</a></li>
+        <li><a href="./drive.html">DRIVE</a></li>
         <li><a href="./view.html">VIEW</a></li>
       </ul>
     </header>
